welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:13: error: Non-zero integral values may not have a leading zero.
    else return 10:00
                   ^alarmClock:13: error: identifier expected but something found.
    else return 10:00
                   ^